--- a/page1.html
+++ b/page1.html
@@ -12,11 +12,7 @@
     </header>
     <main>
         <p>This is the main content of my webpage.</p>
+        <p>paragraph 2?!</p>
     </main>
-    <footer>
-        <p>&copy; 2025 My Company</p>
-    </footer>
-    <!-- Optional: Link to a JavaScript file -->
-    <script src="script.js"></script>
 </body>
 </html>
