--- a/Sierpinski.html
+++ b/Sierpinski.html
@@ -36,7 +36,8 @@
 const WIDTH = 720;
 const HEIGHT = 450;
 const FRAME_RATE = 60;
-const FRAME_TIME = 1000 / FRAME_RATE;
+/*const FRAME_TIME = 1000 / FRAME_RATE;*/
+const FRAME_TIME = 0;
 
 let canvas = document.getElementById("canvas");
 canvas.width = WIDTH;
