--- a/Sierpinski.html
+++ b/Sierpinski.html
@@ -33,8 +33,8 @@
 <canvas id="canvas"></canvas>
 
 <script>
-const WIDTH = 720;
-const HEIGHT = 450;
+const WIDTH = 720 * 2;
+const HEIGHT = 450 * 2;
 const FRAME_RATE = 60;
 /*const FRAME_TIME = 1000 / FRAME_RATE;*/
 const FRAME_TIME = 0;
