--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-color: #111;
-            color: #eee;
+            color: #000000;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -23,7 +23,7 @@
         header h1 {
             font-size: 3em;
             margin: 0;
-            color: #00ffff;
+            color: #ffffff;
         }
 
         main {
@@ -42,7 +42,7 @@
         }
 
         a {
-            color: #00ffff;
+            color: #ffffff;
             text-decoration: none;
             font-size: 1.5em;
         }
