--- a/projects/Sierpinski.html
+++ b/projects/Sierpinski.html
@@ -110,6 +110,15 @@ initialize();
 loop()
 
 </script>
-
+<main>
+    <ul>
+        <!-- Add your projects here -->
+        <li><a href="index.html">back home</a></li>
+        <!-- Example of more projects:
+        <li><a href="projects/AnotherProject.html">Another Project</a></li>
+        <li><a href="projects/ThirdProject.html">Third Project</a></li>
+        -->
+    </ul>
+</main>
 </body>
 </html>
