--- a/projects/Sierpinski.html
+++ b/projects/Sierpinski.html
@@ -113,7 +113,7 @@ loop()
 <main>
     <ul>
         <!-- Add your projects here -->
-        <li><a href="https://evan-hilton.github.io/">back home</a></li>
+        <li><a href="https://evan-hilton.github.io/index.html">back home</a></li>
         <!-- Example of more projects:
         <li><a href="projects/AnotherProject.html">Another Project</a></li>
         <li><a href="projects/ThirdProject.html">Third Project</a></li>
